syntax = "proto3";

package ITMusab.GrpcDemo.Server.Protos;

option csharp_namespace = "ITMusab.GrpcDemo.Server.Protos";

import "google/protobuf/timestamp.proto";

message TrackingMessage {
    int32 deviceId = 1;
    int32 speed = 2;
    Location location = 3;
    google.protobuf.Timestamp stamp = 4;
    repeated Sensor sensors =5;
}
message TrackingResponse {
    bool success = 1;
}

message Location {
    string line1 = 1;
    string line2 = 2;
    int32 postalCode = 3;
    int32 zipCode = 4;
    string city = 5;
    string country = 6;
}

message Sensor{
    string key =1;
    double value=2;

}

message PulseMessage{
        
    ClientStatus state=1;
    string Details=2;
    google.protobuf.Timestamp stamp=3;
}

    enum ClientStatus {
        Working=0;
        Failed=1;
        Invalid=2;
    }